[gd_scene load_steps=5 format=2]

[ext_resource path="res://Script/Menu.gd" type="Script" id=1]
[ext_resource path="res://Font/Roboto-Black.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://fpsDisplay.tscn" type="PackedScene" id=3]

[sub_resource type="DynamicFont" id=1]
size = 25
font_data = ExtResource( 2 )

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.172549, 0.0352941, 0.0352941, 1 )

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -226.0
margin_right = 226.0
margin_bottom = 159.0

[node name="Title" type="Label" parent="VBoxContainer2"]
margin_right = 452.0
margin_bottom = 201.0
custom_fonts/font = SubResource( 1 )
text = "

Napoleon


"
align = 1
autowrap = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -250.0
margin_top = -56.0
margin_right = 251.0
margin_bottom = 114.0
custom_constants/separation = 29
alignment = 1

[node name="Play" type="Button" parent="VBoxContainer"]
margin_top = 1.0
margin_right = 501.0
margin_bottom = 21.0
focus_neighbour_top = NodePath("../Exit")
text = "Play"

[node name="Player Stats" type="Button" parent="VBoxContainer"]
margin_top = 50.0
margin_right = 501.0
margin_bottom = 70.0
text = "Player Stats"

[node name="Settings" type="Button" parent="VBoxContainer"]
margin_top = 99.0
margin_right = 501.0
margin_bottom = 119.0
text = "Settings"

[node name="Exit" type="Button" parent="VBoxContainer"]
margin_top = 148.0
margin_right = 501.0
margin_bottom = 168.0
focus_neighbour_bottom = NodePath("../Play")
text = "Exit"

[node name="Control" parent="." instance=ExtResource( 3 )]

[connection signal="pressed" from="VBoxContainer/Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="VBoxContainer/Player Stats" to="." method="_on_Player_Stats_pressed"]
[connection signal="pressed" from="VBoxContainer/Settings" to="." method="_on_Settings_pressed"]
[connection signal="pressed" from="VBoxContainer/Exit" to="." method="_on_Exit_pressed"]
